@@ -26,7 +26,11 @@ import com.velocitypowered.proxy.VelocityServer;
 import com.velocitypowered.proxy.config.VelocityConfiguration;
 import com.velocitypowered.proxy.connection.client.ConnectedPlayer;
 import com.velocitypowered.proxy.plugin.virtual.VelocityVirtualPlugin;
+import com.velocitypowered.proxy.queue.ServerQueueEntry;
+import com.velocitypowered.proxy.queue.ServerQueueStatus;
+import com.velocitypowered.proxy.queue.cache.SerializableQueue;
 import com.velocitypowered.proxy.redis.multiproxy.RedisGetPlayerPingRequest;
+import com.velocitypowered.proxy.redis.multiproxy.RedisKickPlayerRequest;
 import com.velocitypowered.proxy.redis.multiproxy.RedisPlayerSetTransferringRequest;
 import com.velocitypowered.proxy.redis.multiproxy.RedisSendMessage;
 import com.velocitypowered.proxy.redis.multiproxy.RedisSendMessageToUuidRequest;
@@ -55,6 +59,7 @@ import redis.clients.jedis.JedisClientConfig;
 import redis.clients.jedis.JedisPool;
 import redis.clients.jedis.JedisPoolConfig;
 import redis.clients.jedis.JedisPubSub;
+import redis.clients.jedis.exceptions.JedisDataException;
 import redis.clients.jedis.exceptions.JedisException;
 
 /**
@@ -68,6 +73,7 @@ import redis.clients.jedis.exceptions.JedisException;
 public class RedisManagerImpl {
   private static final String CHANNEL = "velocityredis";
   private static final String CACHE_KEY = "remote-players";
+  private static final String QUEUE_CACHE_KEY = "queue-cache";
 
   private static final Logger logger = LoggerFactory.getLogger(RedisManagerImpl.class);
   private static final Gson gson = new Gson();
@@ -86,10 +92,31 @@ public class RedisManagerImpl {
     this.pubSub = new VelocityPubSub();
 
     if (redisConfig.isEnabled()) {
-      this.start(redisConfig);
+      this.start(redisConfig, velocityServer);
     }
 
     registerListeners(velocityServer);
+  }
+
+  private void startKeepalive(final String proxyId, final VelocityServer server) {
+    if (jedisPool == null) {
+      return;
+    }
+
+    server.getScheduler()
+        .buildTask(VelocityVirtualPlugin.INSTANCE, () -> {
+          if (server.isStartedShutdown()) {
+            return;
+          }
+
+          try (Jedis jedis = jedisPool.getResource()) {
+            jedis.setex("PROXY_HEARTBEAT:" + proxyId, 30, "online");
+          } catch (Exception e) {
+            logger.error("Keepalive failed for Proxy ID '{}'.", proxyId, e);
+          }
+        })
+        .repeat(30, TimeUnit.SECONDS)
+        .schedule();
   }
 
   private void registerListeners(final VelocityServer proxy) {
@@ -104,9 +131,9 @@ public class RedisManagerImpl {
     listen(RedisGetPlayerPingRequest.ID, RedisGetPlayerPingRequest.class, it -> {
       proxy.getPlayer(it.playerToCheck()).ifPresent(player -> {
         Component component = Component.translatable("velocity.command.ping.other",
-                        NamedTextColor.GREEN)
-                        .arguments(Component.text(player.getUsername()),
-                                Component.text(player.getPing()));
+            NamedTextColor.GREEN)
+               .arguments(Component.text(player.getUsername()),
+                   Component.text(player.getPing()));
 
         send(new RedisSendMessage(it.commandSender(), component));
       });
@@ -121,7 +148,7 @@ public class RedisManagerImpl {
       if (connectedPlayer.getProtocolVersion().noLessThan(ProtocolVersion.MINECRAFT_1_20_5)) {
         String connectedServer = connectedPlayer.getConnectedServer() != null ? connectedPlayer.getConnectedServer().getServerInfo().getName() : null;
         send(new RedisPlayerSetTransferringRequest(connectedPlayer.getUniqueId(), true,
-                connectedServer));
+            connectedServer));
       }
 
       proxy.getScheduler().buildTask(VelocityVirtualPlugin.INSTANCE, () -> {
@@ -138,6 +165,18 @@ public class RedisManagerImpl {
         -> proxy.getPlayer(it.username()).ifPresent(player
             -> proxy.getServer(it.server()).ifPresent(server
                 -> player.createConnectionRequest(server).connectWithIndication())));
+
+    listen(RedisKickPlayerRequest.ID, RedisKickPlayerRequest.class, it -> {
+      if (proxy.getMultiProxyHandler().getOwnProxyId().equalsIgnoreCase(it.proxyId())) {
+        return;
+      }
+
+      ConnectedPlayer player = (ConnectedPlayer) proxy.getPlayer(it.player()).orElse(null);
+      if (player != null) {
+        player.setDontRemoveFromRedis(true);
+        player.disconnect0(Component.translatable("velocity.error.already-connected-proxy.remote"), true);
+      }
+    });
   }
 
   /**
@@ -194,40 +233,6 @@ public class RedisManagerImpl {
   }
 
   /**
-   * Adds a proxy ID to the cache.
-   *
-   * @param id The ID of the proxy.
-   */
-  public void addProxyId(final String id) {
-    if (this.jedisPool == null) {
-      return;
-    }
-
-    try (Jedis jedis = this.jedisPool.getResource()) {
-      jedis.sadd("PROXY_IDS", id);
-    } catch (Exception e) {
-      e.printStackTrace();
-    }
-  }
-
-  /**
-   * Removes a proxy ID from the cache.
-   *
-   * @param id The ID of the proxy.
-   */
-  public void removeProxyId(final String id) {
-    if (this.jedisPool == null) {
-      return;
-    }
-
-    try (Jedis jedis = this.jedisPool.getResource()) {
-      jedis.srem("PROXY_IDS", id);
-    } catch (Exception e) {
-      e.printStackTrace();
-    }
-  }
-
-  /**
    * Gets all proxy ids from the cache.
    *
    * @return all the proxy ids.
@@ -238,12 +243,25 @@ public class RedisManagerImpl {
     }
 
     try (Jedis jedis = this.jedisPool.getResource()) {
-      return new ArrayList<>(jedis.smembers("PROXY_IDS").stream().toList());
+      return new ArrayList<>(jedis.keys("PROXY_HEARTBEAT:*").stream().map(key -> key.replace("PROXY_HEARTBEAT:", "")).collect(Collectors.toList()));
     } catch (Exception e) {
       e.printStackTrace();
     }
 
     return new ArrayList<>();
+  }
+
+  /**
+   * Remove the proxy ID from the redis cache.
+   *
+   * @param proxyId The proxy ID.
+   */
+  public void removeProxyId(final String proxyId) {
+    try (Jedis jedis = this.jedisPool.getResource()) {
+      jedis.del("PROXY_HEARTBEAT:" + proxyId);
+    } catch (Exception e) {
+      e.printStackTrace();
+    }
   }
 
   /**
@@ -255,11 +273,9 @@ public class RedisManagerImpl {
     String json = gson.toJson(player);
 
     try (Jedis jedis = this.jedisPool.getResource()) {
-      if (!"hash".equals(jedis.type(CACHE_KEY))) {
-        jedis.del(CACHE_KEY);
-      }
-
       jedis.hset(CACHE_KEY, player.getUuid().toString(), json);
+    } catch (JedisDataException ignored) {
+      // Ignore raw hash due to redundant logging.
     } catch (Exception e) {
       e.printStackTrace();
     }
@@ -294,7 +310,97 @@ public class RedisManagerImpl {
     }
   }
 
-  private void start(final VelocityConfiguration.Redis redisConfig) {
+  /**
+   * Add or update a queue in the cache.
+   *
+   * @param queue The queue to add or update.
+   */
+  public void addOrUpdateQueue(final ServerQueueStatus queue) {
+    if (this.jedisPool == null) {
+      return;
+    }
+
+    try (Jedis jedis = this.jedisPool.getResource()) {
+      jedis.hset(QUEUE_CACHE_KEY, queue.getServerName(), gson.toJson(new SerializableQueue(queue)));
+    } catch (JedisDataException ignored) {
+      // Ignore raw hash due to redundant logging.
+    } catch (Exception e) {
+      e.printStackTrace();
+    }
+  }
+
+  /**
+   * Updates the entry.
+   *
+   * @param serverQueueEntry The entry to update.
+   */
+  public void addOrUpdateEntry(final ServerQueueEntry serverQueueEntry) {
+    if (this.jedisPool == null) {
+      return;
+    }
+
+    ServerQueueStatus status = getQueue(serverQueueEntry.getTarget().getServerInfo().getName())
+        .convert(serverQueueEntry.getProxy(), serverQueueEntry.getTarget());
+    if (status == null) {
+      return;
+    }
+
+    ServerQueueEntry entry = status.getEntry(serverQueueEntry.getPlayer()).orElse(null);
+    if (entry == null) {
+      return;
+    }
+    entry.update(serverQueueEntry.getConnectionAttempts(), serverQueueEntry.isWaitingForConnection(),
+        serverQueueEntry.getPriority(),
+        serverQueueEntry.isFullBypass(),
+        serverQueueEntry.isQueueBypass());
+
+    addOrUpdateQueue(status);
+  }
+
+  /**
+   * Get a queue from the cache based on username.
+   *
+   * @param serverName The name of the server.
+   * @return The queue from the cache.
+   */
+  public SerializableQueue getQueue(final String serverName) {
+    if (this.jedisPool == null) {
+      return null;
+    }
+
+    try (Jedis jedis = this.jedisPool.getResource()) {
+      String json = jedis.hget(QUEUE_CACHE_KEY, serverName);
+      if (json == null) {
+        return null; // Key does not exist
+      }
+      return gson.fromJson(json, SerializableQueue.class);
+    } catch (Exception e) {
+      e.printStackTrace();
+      return null; // Return null in case of an error
+    }
+  }
+
+  /**
+   * Get all the queues from the cache.
+   *
+   * @return All the queues from the cache.
+   */
+  public List<SerializableQueue> getAllQueues() {
+    if (this.jedisPool == null) {
+      return new ArrayList<>();
+    }
+
+    try (Jedis jedis = this.jedisPool.getResource()) {
+      Map<String, String> queueMap = jedis.hgetAll(QUEUE_CACHE_KEY);
+      return queueMap.values().stream()
+          .map(json -> gson.fromJson(json, SerializableQueue.class))
+          .collect(Collectors.toList());
+    } catch (Exception e) {
+      return new ArrayList<>();
+    }
+  }
+
+  private void start(final VelocityConfiguration.Redis redisConfig, final VelocityServer server) {
     try {
       JedisPoolConfig poolConfig = new JedisPoolConfig();
       poolConfig.setMaxTotal(redisConfig.getMaxConcurrentConnections());
@@ -315,18 +421,47 @@ public class RedisManagerImpl {
         try (Jedis jedis = this.jedisPool.getResource()) {
           jedis.subscribe(this.pubSub, CHANNEL);
         } catch (JedisException e) {
-          logger.error("error in pubsub listener", e);
+          logger.error("Error in pubsub listener", e);
         }
       });
       thread.setName("Velocity Redis PubSub Listener Thread");
       thread.setDaemon(true);
       thread.start();
+
+      validateProxyId(redisConfig.getProxyId());
+      startKeepalive(redisConfig.getProxyId(), server);
+      startKeepalivePlayers(server);
     } catch (Exception e) {
-      logger.error("Failed to set up Redis connection", e);
+      logger.error("Failed to setup Redis connection", e);
+    }
+  }
+
+  private void startKeepalivePlayers(final VelocityServer proxy) {
+    proxy.getScheduler().buildTask(VelocityVirtualPlugin.INSTANCE, () -> {
+      for (RemotePlayerInfo info : this.getCache()) {
+        if (info.getProxyId().equalsIgnoreCase(proxy.getConfiguration().getRedis().getProxyId())) {
+          if (proxy.getPlayer(info.getUuid()).isEmpty()) {
+            removePlayer(info);
+          }
+        }
+      }
+    }).repeat(30, TimeUnit.SECONDS).schedule();
+  }
+
+  private void validateProxyId(final String proxyId) {
+    if (jedisPool == null) {
+      throw new IllegalStateException("Redis connection pool is not initialized.");
     }
 
-    if (getProxyIds().contains(redisConfig.getProxyId())) {
-      throw new IllegalArgumentException("This Proxy ID is already in use!");
+    try (Jedis jedis = jedisPool.getResource()) {
+      if (jedis.exists("PROXY_HEARTBEAT:" + proxyId)) {
+        logger.error("Proxy ID '{}' is still marked as running. Killing"
+            + " your proxies with Redis enabled is not suggested. Please wait"
+            + " for Redis to automatically determine whether the proxy is online or not.", proxyId);
+        System.exit(0);
+      }
+    } catch (Exception e) {
+      throw new IllegalStateException("Failed to validate Proxy ID.", e);
     }
   }
 
@@ -404,7 +539,7 @@ public class RedisManagerImpl {
         instance = gson.fromJson(obj, registration.clazz);
       } catch (JsonSyntaxException e) {
         logger.error("received invalid JSON on channel {} for packet class {}", channel,
-                registration.clazz, e);
+            registration.clazz, e);
         return;
       }
 
